--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,26 @@ name = "rusty-todo"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "rusty-todo"
+
 [dependencies]
-actix-web = "4"
+axum = { version = "0.7.5", features = ["macros"] }
+config = "0.14.0"
+http-body-util = "0.1.2"
+serde = { version = "1", features = ["derive"] }
+sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid"] }
+thiserror = "1.0.61"
 tokio = { version = "1.38.0", features = ["full"] }
+tracing = "0.1"
+tracing-attributes = "0.1.26"
+tracing-subscriber = "0.3"
+uuid = { version = "1.8.0", features = ["serde", "v4"] }
+
+[dev-dependencies]
+tower = { version = "0.4", features = ["util"] }
+reqwest = { version = "0.12", features = ["json"] }
