Add key to rust cache

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Rust Cache Action
         uses: Swatinem/rust-cache@v2
+        with:
+          key: sqlx-${{ env.SQLX_VERSION }}
       - name: Install sqlx-cli
         run:
             cargo install sqlx-cli
